@@ -1,0 +1,38 @@
+// -*- mode: C++; c-file-style: "cc-mode" -*-
+//*************************************************************************
+// DESCRIPTION: Verilator: Estimate stackuction count to run the logic
+//                         we would generate for any given AST subtree.
+//
+// Code available from: https://verilator.org
+//
+//*************************************************************************
+//
+// Copyright 2003-2024 by Wilson Snyder. This program is free software; you
+// can redistribute it and/or modify it under the terms of either the GNU
+// Lesser General Public License Version 3 or the Perl Artistic License
+// Version 2.0.
+// SPDX-License-Identifier: LGPL-3.0-only OR Artistic-2.0
+//
+//*************************************************************************
+
+#ifndef VERILATOR_V3STACKCOUNT_H_
+#define VERILATOR_V3STACKCOUNT_H_
+
+#include "config_build.h"
+#include "verilatedos.h"
+
+#include "V3ThreadSafety.h"
+
+class AstNode;
+
+class V3StackCount final {
+public:
+    // Return the estimate count of bytes needed in stack we'd incur while
+    // running code in and under nodep.
+    //
+    // This is a rough estimate; we don't know what path we'll take through
+    // conditionals in nodep, so we assume we take the longest path.
+    static uint64_t count(AstNode* nodep) VL_MT_DISABLED;
+};
+
+#endif  // guard
